# pocoflow

./: .gitignore  README.md  pyproject.toml
cookbook/: README-v1.md  README.md
cookbook/pocoflow-a2a/: README.md  main.py
cookbook/pocoflow-agent/: README.md  main.py  nodes.py  requirements.txt  utils.py
cookbook/pocoflow-async-basic/: README.md  main.py  utils.py
cookbook/pocoflow-batch/: README.md  main.py  utils.py
cookbook/pocoflow-batch-flow/: README.md  main.py  requirements.txt
cookbook/pocoflow-batch-node/: README.md  main.py  requirements.txt
cookbook/pocoflow-chat/: README.md  main.py  requirements.txt  utils.py
cookbook/pocoflow-chat-memory/: README.md  main.py  nodes.py  requirements.txt
cookbook/pocoflow-cli-hitl/: README.md  main.py
cookbook/pocoflow-code-generator/: README.md  main.py  nodes.py  utils.py
cookbook/pocoflow-communication/: README.md  main.py
cookbook/pocoflow-fastapi-background/: README.md  main.py  requirements.txt
cookbook/pocoflow-fastapi-hitl/: README.md  main.py  requirements.txt
cookbook/pocoflow-fastapi-websocket/: README.md  main.py  requirements.txt
cookbook/pocoflow-flow/: README.md  main.py
cookbook/pocoflow-google-calendar/: README.md  main.py  requirements.txt
cookbook/pocoflow-hello-world/: README.md  main.py  utils.py
docs/: design.md  readme-pip.md
examples/: hello.py
picoflow/: __init__.py  db.py  flow.py  logging.py  node.py  runner.py  store.py
pocoflow/: __init__.py  db.py  flow.py  logging.py  node.py  runner.py  store.py  utils.py
tests/: test_picoflow.py  test_pocoflow.py
(+83 files in other folders)
