[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pocoflow"
version = "0.2.0"
description = "Lightweight LLM workflow orchestration — a hardened evolution of PocketFlow"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "digital-duck", email = "digital-duck@users.noreply.github.com" },
]
keywords = ["llm", "workflow", "orchestration", "agent", "pipeline", "etl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10"
dependencies = [
    "pocketflow>=0.0.1",
    "dd-logging>=0.1.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.32",
    "pandas>=1.5",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/digital-duck/pocoflow"
Repository = "https://github.com/digital-duck/pocoflow"
"Bug Tracker" = "https://github.com/digital-duck/pocoflow/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pocoflow*"]
